tests/linear/known-all/expected
Example Known Circuits
## Circuits
### FlipFlopD.sv
```
// LOG : Starting Linear NetList 
// LOG : Parsing Successful
../../shared/known/FlipFlopD.sv:12:17-18: Linearity Error:
i := USED

```
### Verilator
```
%Warning-UNOPTFLAT: ../../shared/known/FlipFlopD.sv:4:18: Signal unoptimizable: Circular combinational logic: 'o'
    4 |   , output logic o
      |                  ^
                    ... For warning description see https://verilator.org/warn/UNOPTFLAT?v=5.002
                    ... Use "/* verilator lint_off UNOPTFLAT */" and lint_on around source to disable this message.
                    ../../shared/known/FlipFlopD.sv:4:18:      Example path: o
                    ../../shared/known/FlipFlopD.sv:20:9:      Example path: ASSIGNW
                    ../../shared/known/FlipFlopD.sv:5:18:      Example path: oinv
                    ../../shared/known/FlipFlopD.sv:18:9:      Example path: ASSIGNW
                    ../../shared/known/FlipFlopD.sv:4:18:      Example path: o
%Error: Exiting due to 1 warning(s)
```
### FullAdder.sv
```
// LOG : Starting Linear NetList 
// LOG : Parsing Successful
../../shared/known/FullAdder.sv:13:13-14: Linearity Error:
a := USED

```
### Verilator
```
```
### HalfAdder.sv
```
// LOG : Starting Linear NetList 
// LOG : Parsing Successful
../../shared/known/HalfAdder.sv:9:16-17: Linearity Error:
a := USED

```
### Verilator
```
```
### Mux21.sv
```
// LOG : Starting Linear NetList 
// LOG : Parsing Successful
../../shared/known/Mux21.sv:13:14-20: Linearity Error:
select := USED

```
### Verilator
```
```
